# devops_stuff

./: .gitignore  README.md  adv_hexa_data_structers.py  class.py  decorators.py  diction.py  find_even_largest_str.py  func.py  generators.py  gui.py  ifelse.py  images.py  interview.py  kub.key  lists.py  lists_tuples_set.py  magic_or_dunder.py  pdf_excel_csv.py  py2to3.py  py2to3diff.md  sada.csv  send_email.py  sip.txt  strings.py  test.py  theory_interview.py
Java/HelloWorld/src/: FirstClass.java  StmtExprMethOverloading.java
aws/: .interview.txt.swo  .interview.txt.swp  Advanced_IAM  Database.md  EC2.md  HA.txt  IAM_S2.md  Route53.md  interview.txt  vpc.md
docker/: README.md  README.txt  environment.yaml  initCOntainer.yaml  kubernates  kubernates2  multicontainerpod.yaml  nodeaffinity_conditions.yaml  secrets.yaml  swarm.md
git/: interview.txt
jenkins/: interview.txt
kubernetes/: k8_cluster_maintainance.md
linux/: .interrview.md.swp  .interview.txt.swp  interrview.md  interrview.txt  interview.txt  interview2.txt  zombie.py
puppet/: README.txt
python/: adv_python_module_01.py  comprhension.py  decorators.py  generators.py  inheritance.py  interview1.py  interview2.py  lenfind.py  list_tuple.py  lists_tuples_set.py  polymorphism.py  repl.py  string_set_dictionary.py  timing.py  webscrapping.py
python/module_pkg/: mymodule.py  mypackage.py
python/module_pkg/MyMainPackage/: my_main_package.py
python/module_pkg/MyMainPackage/MySubPackage/: my_sub_package.py
python/programs/: adv_python_module_02.py  args_kwargs.py  class.py  emp.py  magic_or_dunder.py  test.py
python/uv/: .gitignore  README.md  pyproject.toml  pyproject.toml_old  tox.ini  uv.sh
python/uv/sada_app/: pyproject.toml
python/uv/sada_app/src/sada_app/: __init__.py
python/uv/sada_lib/: pyproject.toml
python/uv/sada_lib/src/sada_lib/: __init__.py
python/uv/src/uv/: __init__.py  main.py
shellscript/: asp.sh  interview.txt  newlist  quick-guide  while.sh
