[build-system]
requires = ["setuptools==70.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sadashiv H", email = "sadamsrit@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "boto>=2.49.0",
    "sada-lib",
    "numpy==1.24.4",
    "numpy==2.0.0",
]

[project.scripts]
uv = "uv:main"

[project.optional-dependencies]
dev = [
    "mypy==1.14.1",
    "pylint==3.2.7",
    "pytest==8.3.5",
]

[tool.uv.sources]
sada-lib = { path = "sada_lib", editable = true } #editable install similar to pipe install -e
sada-app = { path = "sada_app", package = true } #editable install similar to pipe install -e
uv = { path = "dist/uv-0.1.0-py3-none-any.whl" } #installing from local wheel

#[tool.uv] #disable automatic locking
#managed = false

[dependency-groups]
dev = [
    "django",
]
lint = [
    "ruff>=0.9.1",
]

[tool.uv]
override-dependencies = ["numpy == 1.24.4"]
