[project]
name = "sada-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sadashiv H", email = "sadamsrit@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
sada-app = "sada_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
