[build-system]
requires = ["setuptools==70.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sada-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sadashiv H", email = "sadamsrit@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
sada-lib = "sada_lib:main"

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
